# serde-reflection

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  aliases.js  crates.js  search-index.js  settings.html  source-files.js
.circleci/: config.yml
serde-generate/: .gitignore  Cargo.toml  README.md  README.tpl
serde-generate/runtime/cpp/: bcs.hpp  binary.hpp  bincode.hpp  lcs.hpp  serde.hpp
serde-generate/runtime/csharp/: Serde.sln
serde-generate/runtime/csharp/Bcs/: Bcs.csproj  BcsDeserializer.cs  BcsSerializer.cs
serde-generate/runtime/csharp/Bincode/: Bincode.csproj  BincodeDeserializer.cs  BincodeSerializer.cs
serde-generate/runtime/csharp/Serde/: BinaryDeserializer.cs  BinarySerializer.cs  Bytes.cs  DeserializationException.cs  IDeserializer.cs  ISerializer.cs  Option.cs  Range.cs  Serde.csproj  SerializationException.cs  Unit.cs  ValueArray.cs  ValueDictionary.cs  Verification.cs
serde-generate/runtime/csharp/Serde.Tests/: Serde.Tests.csproj  TestBcs.cs  TestLcs.cs
serde-generate/runtime/csharp/Serde/Bcs/: BcsDeserializer.cs
serde-generate/runtime/csharp/Serde/Bincode/: BincodeDeserializer.cs  BincodeSerializer.cs
serde-generate/runtime/csharp/Serde/Lcs/: LcsDeserializer.cs  LcsSerializer.cs
serde-generate/runtime/csharp/serde/: BinaryDeserializer.cs  BinarySerializer.cs  DeserializationException.cs  IDeserializer.cs  ISerializer.cs  Serde.csproj  SerializationException.cs  Unit.cs
serde-generate/runtime/dart/: pubspec.yaml
serde-generate/runtime/dart/bcs/: bcs.dart  bcs_deserializer.dart  bcs_serializer.dart
serde-generate/runtime/dart/bincode/: BincodeDeserializer.dart  bincode.dart  bincode_deserializer.dart  bincode_serializer.dart
serde-generate/runtime/dart/lcs/: LcsDeserializer.dart  LcsSerializer.dart  LcsTest.dart  lcs.dart
serde-generate/runtime/dart/serde/: BinaryDeserializer.dart  BinarySerializer.dart  Bytes.dart  HashUtils.dart  Int128.dart  Slice.dart  Tuple2.dart  Tuple3.dart  Tuple4.dart  Tuple5.dart  Tuple6.dart  Unit.dart  binary_deserializer.dart  binary_serializer.dart  bytes.dart  hash_utils.dart  int_128.dart  serde.dart  slice.dart  uint_128.dart  uint_64.dart  unit.dart
serde-generate/runtime/dart/test/: bcs.dart  bcs_test.dart  bincode.dart  bincode_test.dart  runtime.dart  serde.dart  serde_generate.dart  serde_test.dart  starcoin_test.dart
serde-generate/runtime/deno/serde/: binaryDeserializer.ts
serde-generate/runtime/golang/: go.mod
serde-generate/runtime/golang/bcs/: bcs_test.go  deserializer.go  serializer.go
serde-generate/runtime/golang/bincode/: deserializer.go  serializer.go
serde-generate/runtime/golang/lcs/: deserializer.go  lcs_test.go  serializer.go
serde-generate/runtime/golang/serde/: binary_deserializer.go  binary_serializer.go  interfaces.go  types.go
serde-generate/runtime/golang/src/: go.mod
serde-generate/runtime/java/bincode/: BincodeDeserializer.java  BincodeSerializer.java
serde-generate/runtime/java/lcs/: LcsDeserializer.java  LcsSerializer.java  LcsTest.java
serde-generate/runtime/java/serde/: ArrayLen.java  BinaryDeserializer.java  BinarySerializer.java  Bytes.java  Deserializer.java  FixedLength.java  Int128.java  Serializer.java  Slice.java  Tuple2.java  Tuple3.java  Tuple4.java  Tuple5.java  Tuple6.java  Unit.java  Unsigned.java
serde-generate/runtime/python/bcs/: __init__.py  test_bcs.py
serde-generate/runtime/python/bincode/: __init__.py  test_bincode.py
serde-generate/runtime/python/lcs/: __init__.py  test_lcs.py
serde-generate/runtime/python/serde_binary/: __init__.py
serde-generate/runtime/python/serde_types/: __init__.py  test_serde_types.py
serde-generate/runtime/swift/: Package.swift  README.md
serde-generate/runtime/swift/Bincode/: BincodeDeserializer.swift  BincodeSerializer.swift
serde-generate/runtime/swift/Serde/: BigInt.swift  BinaryDeserializer.swift  BinaryReader.swift  BinarySerializer.swift  ByteBuffer.swift  Data+Array.swift  Data+InputStream.swift  Deserializer.swift  LcsDeserializer.swift  LcsSerializer.swift  OutputStream+Buffer.swift  Serializer.swift  Slice.swift  Unit.swift  Verification.swift
serde-generate/runtime/swift/Test/: Diem_TransactionTests.swift
serde-generate/runtime/swift/Tests/: LinuxMain.swift
serde-generate/runtime/ts/bincode/: bincodeSerializer.ts
serde-generate/runtime/ts/lcs/: lcsDeserializer.ts  lcsSerializer.ts
serde-generate/runtime/ts/serde/: binaryDeserializer.ts  binarySerializer.ts  deserializer.ts  leb.d.ts  serializer.ts
serde-generate/runtime/typescript/bcs/: bcsDeserializer.ts  bcsSerializer.ts
serde-generate/runtime/typescript/bincode/: bincodeDeserializer.ts  bincodeSerializer.ts  index.ts  mod.ts
serde-generate/runtime/typescript/lcs/: lcsDeserializer.ts  lcsSerializer.ts
serde-generate/runtime/typescript/serde/: binaryDeserializer.ts  binarySerializer.ts  deserializer.ts  serializer.ts  types.ts
serde-generate/src/: analyzer.rs  common.rs  config.rs  cpp.rs  csharp.rs  dart.rs  deno.rs  generate.rs  golang.rs  indent.rs  java.rs  lib.rs  python3.rs  rust.rs  swift.rs  test_utils.rs  ts.rs  typescript.rs
serde-generate/test_utils/: Cargo.toml
serde-generate/test_utils/src/: lib.rs
serde-generate/tests/: analyzer.rs  bincode_runtime.rs  cli.rs  cpp_generation.rs  cpp_runtime.rs  csharp_generation.rs  csharp_runtime.rs  dart_generation.rs  dart_runtime.rs  deno_generation.rs  deno_runtime.rs  generation.rs  golang_generation.rs  golang_runtime.rs  installer.rs  java_generation.rs  java_runtime.rs  lcs_runtime.rs  python_generation.rs  python_runtime.rs  runtime.rs  runtimes.rs  rust_generation.rs  rust_runtime.rs  swift_generation.rs  swift_runtime.rs  ts_generation.rs  typescript_generation.rs  typescript_runtime.rs
serde-name/: Cargo.toml  README.md  README.tpl
serde-name/src/: de_adapter.rs  lib.rs  ser_adapter.rs  trace.rs
serde-name/tests/: de_adapter.rs  ser_adapter.rs
serde-reflection/: Cargo.toml  README.md  README.tpl
serde-reflection/src/: de.rs  error.rs  format.rs  lib.rs  ser.rs  trace.rs  value.rs
serde-reflection/tests/: format.rs  serde.rs
(+16025 files in other folders)
