[package]
name = "serde-generate"
version = "0.14.0"
description = "Generate (de)serialization code in multiple languages"
documentation = "https://docs.rs/serde-generate"
repository = "https://github.com/novifinancial/serde-reflection"
authors = ["Mathieu Baudet <mathieubaudet@calibra.com>", "Brandon Williams <bmwill@calibra.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["data-structures", "serialization", "serde"]
categories = ["encoding", "development-tools"]
edition = "2018"
exclude = [
    # Readme template that doesn't need to be included.
    "README.tpl",
]

[features]
runtime-testing = ["libra-canonical-serialization", "bincode"]

[dependencies]
heck = "0.3.1"
include_dir = "0.6"
maplit = "1.0.2"
serde = { version = "1.0.112", features = ["derive"] }
serde_bytes = "0.11.3"
serde_yaml = "0.8"
structopt = "0.3.12"
textwrap = "0.12.1"

serde-reflection = { path = "../serde-reflection", version = "0.3.0" }

bincode = { version = "1.2", optional = true }
libra-canonical-serialization = { git = "https://github.com/libra/libra.git", branch = "testnet", optional = true }

[dev-dependencies]
bincode = { version = "1.2" }
tempfile = "3.1"
hex = "0.4.2"
which = "4.0.2"

[[bin]]
name = "serdegen"
path = "src/generate.rs"
test = false
