[package]
name = "serde-generate"
version = "0.16.1"
description = "Generate (de)serialization code in multiple languages"
documentation = "https://docs.rs/serde-generate"
repository = "https://github.com/novifinancial/serde-reflection"
authors = ["Mathieu Baudet <mathieubaudet@fb.com>", "Brandon Williams <bmwill@fb.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["data-structures", "serialization", "serde"]
categories = ["encoding", "development-tools"]
edition = "2018"
exclude = [
    # Readme template that doesn't need to be included.
    "README.tpl",
]

[dependencies]
heck = "0.3.1"
include_dir = "0.6"
maplit = "1.0.2"
serde = { version = "1.0.116", features = ["derive"] }
serde_bytes = "0.11.3"
serde_yaml = "0.8"
structopt = "0.3.12"
textwrap = "0.12.1"

serde-reflection = { path = "../serde-reflection", version = "0.3.0" }
bincode = { version = "1.3.1" }
bcs = { version = "0.1.1" }

[dev-dependencies]
lazy_static = "1"
tempfile = "3.1"
hex = "0.4.2"
which = "4.0.2"

[[bin]]
name = "serdegen"
path = "src/generate.rs"
test = false
