[package]
name = "serde-generate"
version = "0.20.2"
description = "Generate (de)serialization code in multiple languages"
documentation = "https://docs.rs/serde-generate"
repository = "https://github.com/novifinancial/serde-reflection"
authors = ["Mathieu Baudet <mathieubaudet@fb.com>", "Brandon Williams <bmwill@fb.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["data-structures", "serialization", "serde"]
categories = ["encoding", "development-tools"]
edition = "2018"
exclude = [
    # Readme template that doesn't need to be included.
    "README.tpl",
]

[dependencies]
heck = "0.3.2"
include_dir = "0.6.0"
maplit = "1.0.2"
serde = { version = "1.0.126", features = ["derive"] }
serde_bytes = "0.11.5"
serde_yaml = "0.8.17"
structopt = "0.3.21"
textwrap = "0.13.4"

serde-reflection = { path = "../serde-reflection", version = "0.3.5" }
bincode = "1.3.3"
bcs = "0.1.3"

[dev-dependencies]
hex = "0.4.3"
lazy_static = "1.4.0"
regex = "1.5.4"
tempfile = "3.2.0"
which = "4.1.0"

[[bin]]
name = "serdegen"
path = "src/generate.rs"
test = false
