[package]
name = "serde-name"
version = "0.1.1"
description = "Extract the Serde name of structs and enums"
documentation = "https://docs.rs/serde-name"
repository = "https://github.com/novifinancial/serde-reflection"
authors = ["Mathieu Baudet <mathieubaudet@fb.com>", "Brandon Williams <bmwill@fb.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["data-structures", "serialization", "serde"]
categories = ["encoding", "development-tools"]
edition = "2018"
exclude = [
    # Readme template that doesn't need to be included.
    "README.tpl",
]

[dependencies]
thiserror = "1.0.25"
serde = { version = "1.0.126", features = ["derive"] }

[dev-dependencies]
serde-reflection = { path = "../serde-reflection", version = "0.3.3" }
